--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>OpenTripPlanner</name>
+    <name>OpenTripPlanner-Phani</name>
     <description>The OpenTripPlanner multimodal journey planning system</description>
     <url>http://opentripplanner.org</url>
 
     <groupId>org.opentripplanner</groupId>
     <artifactId>otp</artifactId>
-    <version>1.3.0</version>
+    <version>1.3.0-phanipatch</version>
     <packaging>jar</packaging>
 
     <licenses>
